# multi-agent-research-platform

./: .env  .gitignore  pyproject.toml  requirements.txt
automated_research_report_generation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research_and_analyst/automated_research_report_generation.egg-info/: SOURCES.txt  requires.txt
research_and_analyst/exception/: custom_exception.py
research_and_analyst/notebook/: test.ipynb
research_and_analyst/utils/: config_loader.py
