[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.68,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langgraph>=0.6.0,<1.0.0",
    "structlog==25.4.0",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
]

authors = [{ name = "Krishna Goud" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]

